final_project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIV
    ELSE
    IGNORE_CONTENT
    MINUS
    MULT
    PRINT

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> program statement
Rule 3     statement -> INT VAR SEMICOLON
Rule 4     statement -> INT VAR EQUALS NUM SEMICOLON
Rule 5     statement -> VAR EQUALS NUM SEMICOLON
Rule 6     statement -> IF LPAREN condition RPAREN
Rule 7     statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN
Rule 8     statement -> WHILE LPAREN condition RPAREN
Rule 9     condition -> VAR GREATER NUM
Rule 10    condition -> VAR LESS NUM
Rule 11    condition -> VAR GREATER VAR
Rule 12    condition -> VAR LESS VAR
Rule 13    condition -> VAR EQUALS EQUALS NUM
Rule 14    for_update -> VAR PLUS PLUS

Terminals, with rules where they appear

DIV                  : 
ELSE                 : 
EQUALS               : 6 7 9 15 15
FOR                  : 9
GREATER              : 11 13
IF                   : 8
IGNORE_CONTENT       : 
INT                  : 3 4 7
LB                   : 
LESS                 : 10 12
LPAREN               : 6 7 8
MINUS                : 
MULT                 : 
NUM                  : 6 7 9 11 12 15
PLUS                 : 16 16
PRINT                : 
RB                   : 
RPAREN               : 6 7 8
SEMICOLON            : 3 4 5 7 7
VAR                  : 3 4 5 7 9 10 11 11 12 12 13 14
WHILE                : 8
error                : 

Nonterminals, with rules where they appear

args                 : 3
condition            : 8 9 10
for_update           : 9
program              : 2 0
statement            : 1 2 15

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . program statement
    (3) statement -> . INT VAR SEMICOLON
    (4) statement -> . INT VAR EQUALS NUM SEMICOLON
    (5) statement -> . VAR EQUALS NUM SEMICOLON
    (6) statement -> . IF LPAREN condition RPAREN
    (7) statement -> . FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN
    (8) statement -> . WHILE LPAREN condition RPAREN

    INT             shift and go to state 3
    VAR             shift and go to state 4
    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 7
    LB              shift and go to state 8

    program                        shift and go to state 1
    statement                      shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . statement
    (3) statement -> . INT VAR SEMICOLON
    (4) statement -> . INT VAR EQUALS NUM SEMICOLON
    (5) statement -> . VAR EQUALS NUM SEMICOLON
    (6) statement -> . IF LPAREN condition RPAREN
    (7) statement -> . FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN
    (8) statement -> . WHILE LPAREN condition RPAREN

    INT             shift and go to state 3
    VAR             shift and go to state 4
    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 7
    LB              shift and go to state 8

    statement                      shift and go to state 9

state 2

    (1) program -> statement .

    INT             reduce using rule 1 (program -> statement .)
    VAR             reduce using rule 1 (program -> statement .)
    IF              reduce using rule 1 (program -> statement .)
    FOR             reduce using rule 1 (program -> statement .)
    WHILE           reduce using rule 1 (program -> statement .)
    LB              reduce using rule 1 (program -> statement .)
    $end            reduce using rule 1 (program -> statement .)


state 3

    (3) statement -> INT . VAR LPAREN args RPAREN SEMICOLON
    (5) statement -> INT . VAR SEMICOLON
    (6) statement -> INT . VAR EQUALS NUM SEMICOLON

    VAR             shift and go to state 10


state 4

    (7) statement -> VAR . EQUALS NUM SEMICOLON

    EQUALS          shift and go to state 11


state 5

    (8) statement -> IF . LPAREN condition RPAREN

    LPAREN          shift and go to state 12


state 6

    (9) statement -> FOR . LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN

    LPAREN          shift and go to state 13


state 7

    (10) statement -> WHILE . LPAREN condition RPAREN

    LPAREN          shift and go to state 14


state 8

    (15) statement -> LB . statement RB
    (3) statement -> . INT VAR SEMICOLON
    (4) statement -> . INT VAR EQUALS NUM SEMICOLON
    (5) statement -> . VAR EQUALS NUM SEMICOLON
    (6) statement -> . IF LPAREN condition RPAREN
    (7) statement -> . FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN
    (8) statement -> . WHILE LPAREN condition RPAREN
    (15) statement -> . LB statement RB

    INT             shift and go to state 3
    VAR             shift and go to state 4
    IF              shift and go to state 5
    FOR             shift and go to state 6
    WHILE           shift and go to state 7
    LB              shift and go to state 8

    statement                      shift and go to state 15

state 9

    (2) program -> program statement .

    INT             reduce using rule 2 (program -> program statement .)
    VAR             reduce using rule 2 (program -> program statement .)
    IF              reduce using rule 2 (program -> program statement .)
    FOR             reduce using rule 2 (program -> program statement .)
    WHILE           reduce using rule 2 (program -> program statement .)
    LB              reduce using rule 2 (program -> program statement .)
    $end            reduce using rule 2 (program -> program statement .)


state 10

    (3) statement -> INT VAR . LPAREN args RPAREN SEMICOLON
    (5) statement -> INT VAR . SEMICOLON
    (6) statement -> INT VAR . EQUALS NUM SEMICOLON

    SEMICOLON       shift and go to state 14
    EQUALS          shift and go to state 15


state 11

    (7) statement -> VAR EQUALS . NUM SEMICOLON

    NUM             shift and go to state 16


state 12

    (8) statement -> IF LPAREN . condition RPAREN
    (11) condition -> . VAR GREATER NUM
    (12) condition -> . VAR LESS NUM
    (13) condition -> . VAR GREATER VAR
    (14) condition -> . VAR LESS VAR
    (15) condition -> . VAR EQUALS EQUALS NUM

    VAR             shift and go to state 18

    condition                      shift and go to state 17

state 13

    (9) statement -> FOR LPAREN . INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN

    INT             shift and go to state 19


state 14

    (10) statement -> WHILE LPAREN . condition RPAREN
    (11) condition -> . VAR GREATER NUM
    (12) condition -> . VAR LESS NUM
    (13) condition -> . VAR GREATER VAR
    (14) condition -> . VAR LESS VAR
    (15) condition -> . VAR EQUALS EQUALS NUM

    VAR             shift and go to state 18

    condition                      shift and go to state 20

state 16

    (3) statement -> INT VAR SEMICOLON .

    INT             reduce using rule 3 (statement -> INT VAR SEMICOLON .)
    VAR             reduce using rule 3 (statement -> INT VAR SEMICOLON .)
    IF              reduce using rule 3 (statement -> INT VAR SEMICOLON .)
    FOR             reduce using rule 3 (statement -> INT VAR SEMICOLON .)
    WHILE           reduce using rule 3 (statement -> INT VAR SEMICOLON .)
    $end            reduce using rule 3 (statement -> INT VAR SEMICOLON .)


state 17

    (4) statement -> INT VAR EQUALS . NUM SEMICOLON

    NUM             shift and go to state 21


state 18

    (6) statement -> INT VAR EQUALS . NUM SEMICOLON

    SEMICOLON       shift and go to state 22


state 19

    (7) statement -> VAR EQUALS NUM . SEMICOLON

    RPAREN          shift and go to state 23


state 20

    (9) condition -> VAR . GREATER NUM
    (10) condition -> VAR . LESS NUM
    (11) condition -> VAR . GREATER VAR
    (12) condition -> VAR . LESS VAR
    (13) condition -> VAR . EQUALS EQUALS NUM

    GREATER         shift and go to state 24
    LESS            shift and go to state 25
    EQUALS          shift and go to state 26


state 21

    (7) statement -> FOR LPAREN INT . VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN

    VAR             shift and go to state 27


state 22

    (9) statement -> FOR LPAREN INT . VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN

    RPAREN          shift and go to state 28


state 23

    (15) statement -> LB statement RB .

    INT             reduce using rule 15 (statement -> LB statement RB .)
    VAR             reduce using rule 15 (statement -> LB statement RB .)
    IF              reduce using rule 15 (statement -> LB statement RB .)
    FOR             reduce using rule 15 (statement -> LB statement RB .)
    WHILE           reduce using rule 15 (statement -> LB statement RB .)
    LB              reduce using rule 15 (statement -> LB statement RB .)
    $end            reduce using rule 15 (statement -> LB statement RB .)
    RB              reduce using rule 15 (statement -> LB statement RB .)


state 24

    (10) statement -> WHILE LPAREN condition . RPAREN

    SEMICOLON       shift and go to state 29


state 25

    (5) statement -> VAR EQUALS NUM SEMICOLON .

    INT             reduce using rule 5 (statement -> VAR EQUALS NUM SEMICOLON .)
    VAR             reduce using rule 5 (statement -> VAR EQUALS NUM SEMICOLON .)
    IF              reduce using rule 5 (statement -> VAR EQUALS NUM SEMICOLON .)
    FOR             reduce using rule 5 (statement -> VAR EQUALS NUM SEMICOLON .)
    WHILE           reduce using rule 5 (statement -> VAR EQUALS NUM SEMICOLON .)
    $end            reduce using rule 5 (statement -> VAR EQUALS NUM SEMICOLON .)


state 26

    (6) statement -> IF LPAREN condition RPAREN .

    INT             reduce using rule 6 (statement -> IF LPAREN condition RPAREN .)
    VAR             reduce using rule 6 (statement -> IF LPAREN condition RPAREN .)
    IF              reduce using rule 6 (statement -> IF LPAREN condition RPAREN .)
    FOR             reduce using rule 6 (statement -> IF LPAREN condition RPAREN .)
    WHILE           reduce using rule 6 (statement -> IF LPAREN condition RPAREN .)
    $end            reduce using rule 6 (statement -> IF LPAREN condition RPAREN .)


state 27

    (6) statement -> INT VAR EQUALS NUM . SEMICOLON

    NUM             shift and go to state 31
    VAR             shift and go to state 30


state 28

    (10) condition -> VAR LESS . NUM
    (12) condition -> VAR LESS . VAR

    NUM             shift and go to state 33
    VAR             shift and go to state 32


state 29

    (13) condition -> VAR EQUALS . EQUALS NUM

    EQUALS          shift and go to state 34


state 30

    (11) condition -> VAR GREATER . NUM
    (13) condition -> VAR GREATER . VAR

    EQUALS          shift and go to state 35


state 31

    (8) statement -> WHILE LPAREN condition RPAREN .

    INT             reduce using rule 8 (statement -> WHILE LPAREN condition RPAREN .)
    VAR             reduce using rule 8 (statement -> WHILE LPAREN condition RPAREN .)
    IF              reduce using rule 8 (statement -> WHILE LPAREN condition RPAREN .)
    FOR             reduce using rule 8 (statement -> WHILE LPAREN condition RPAREN .)
    WHILE           reduce using rule 8 (statement -> WHILE LPAREN condition RPAREN .)
    $end            reduce using rule 8 (statement -> WHILE LPAREN condition RPAREN .)


state 32

    (4) statement -> INT VAR EQUALS NUM SEMICOLON .

    INT             reduce using rule 4 (statement -> INT VAR EQUALS NUM SEMICOLON .)
    VAR             reduce using rule 4 (statement -> INT VAR EQUALS NUM SEMICOLON .)
    IF              reduce using rule 4 (statement -> INT VAR EQUALS NUM SEMICOLON .)
    FOR             reduce using rule 4 (statement -> INT VAR EQUALS NUM SEMICOLON .)
    WHILE           reduce using rule 4 (statement -> INT VAR EQUALS NUM SEMICOLON .)
    $end            reduce using rule 4 (statement -> INT VAR EQUALS NUM SEMICOLON .)


state 33

    (9) statement -> FOR LPAREN INT VAR . EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN

    EQUALS          shift and go to state 40


state 34

    (10) statement -> WHILE LPAREN condition RPAREN .

    INT             reduce using rule 10 (statement -> WHILE LPAREN condition RPAREN .)
    VAR             reduce using rule 10 (statement -> WHILE LPAREN condition RPAREN .)
    IF              reduce using rule 10 (statement -> WHILE LPAREN condition RPAREN .)
    FOR             reduce using rule 10 (statement -> WHILE LPAREN condition RPAREN .)
    WHILE           reduce using rule 10 (statement -> WHILE LPAREN condition RPAREN .)
    $end            reduce using rule 10 (statement -> WHILE LPAREN condition RPAREN .)


state 35

    (4) args -> INT VAR .

    RPAREN          reduce using rule 4 (args -> INT VAR .)


state 36

    (3) statement -> INT VAR LPAREN args RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 41


state 37

    (13) condition -> VAR EQUALS EQUALS . NUM

    NUM             shift and go to state 36


state 38

    (13) condition -> VAR GREATER VAR .

    NUM             shift and go to state 37


state 39

    (11) condition -> VAR GREATER NUM .

    RPAREN          reduce using rule 11 (condition -> VAR GREATER NUM .)
    SEMICOLON       reduce using rule 11 (condition -> VAR GREATER NUM .)


state 40

    (14) condition -> VAR LESS VAR .

    SEMICOLON       shift and go to state 38


state 41

    (7) statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON . condition SEMICOLON for_update RPAREN
    (9) condition -> . VAR GREATER NUM
    (10) condition -> . VAR LESS NUM
    (11) condition -> . VAR GREATER VAR
    (12) condition -> . VAR LESS VAR
    (13) condition -> . VAR EQUALS EQUALS NUM

    VAR             shift and go to state 18

    condition                      shift and go to state 39

state 42

    (15) condition -> VAR EQUALS EQUALS . NUM

    SEMICOLON       shift and go to state 40


state 43

    (9) statement -> FOR LPAREN INT VAR EQUALS . NUM SEMICOLON condition SEMICOLON for_update RPAREN

    VAR             shift and go to state 41

    for_update                     shift and go to state 42

state 44

    (14) for_update -> VAR . PLUS PLUS

    PLUS            shift and go to state 43


state 45

    (15) condition -> VAR EQUALS EQUALS NUM .

    RPAREN          shift and go to state 44


state 46

    (9) statement -> FOR LPAREN INT VAR EQUALS NUM . SEMICOLON condition SEMICOLON for_update RPAREN

    PLUS            shift and go to state 45


state 47

    (7) statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .

    INT             reduce using rule 7 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    VAR             reduce using rule 7 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    IF              reduce using rule 7 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    FOR             reduce using rule 7 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    WHILE           reduce using rule 7 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    $end            reduce using rule 7 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)


state 48

    (9) statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition . SEMICOLON for_update RPAREN

    SEMICOLON       shift and go to state 46


state 46

    (9) statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON . for_update RPAREN
    (16) for_update -> . VAR PLUS PLUS

    VAR             shift and go to state 47

    for_update                     shift and go to state 48

state 47

    (16) for_update -> VAR . PLUS PLUS

    PLUS            shift and go to state 49


state 48

    (9) statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update . RPAREN

    RPAREN          shift and go to state 50


state 49

    (16) for_update -> VAR PLUS . PLUS

    PLUS            shift and go to state 51


state 50

    (9) statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .

    INT             reduce using rule 9 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    VAR             reduce using rule 9 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    IF              reduce using rule 9 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    FOR             reduce using rule 9 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    WHILE           reduce using rule 9 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)
    $end            reduce using rule 9 (statement -> FOR LPAREN INT VAR EQUALS NUM SEMICOLON condition SEMICOLON for_update RPAREN .)


state 51

    (16) for_update -> VAR PLUS PLUS .

    RPAREN          reduce using rule 16 (for_update -> VAR PLUS PLUS .)

